--- a/TTBSMPatTuples/test/crab_data_triggerOFF_2012B.cfg
+++ b/TTBSMPatTuples/test/crab_data_triggerOFF_2012B.cfg
@@ -4,17 +4,18 @@ scheduler = condor
 use_server = 0
 
 [CMSSW]
-datasetpath = /JetHT/yxin-Run2012D-22Jan2013-v1_TLBSM_53x_v3-45cbb6c27540456f7aaf244304c73a89/USER 
+datasetpath = /JetHT/yxin-Run2012B-22Jan2013-v1_TLBSM_53x_v3-45cbb6c27540456f7aaf244304c73a89/USER
 dbs_url = http://cmsdbsprod.cern.ch/cms_dbs_ph_analysis_02/servlet/DBSServlet
-pset = ttbsmTupleProducer_cfg.py
+pset = ttbsmTrigAnaOFF_cfg.py
 total_number_of_lumis = -1
-number_of_jobs = 150
+number_of_jobs = 200
 get_edm_output = 1
 pycfg_params = 
 lumi_mask=GOLDEN_22Jan2013.json
+allow_NonProductionCMSSW = 1
 
 [USER]
 #debug_wrapper = 1
 return_data = 1
-ui_working_dir = /uscms/home/pilot/3DayLifetime/data2013_D
+ui_working_dir = /uscms/home/pilot/3DayLifetime/data2013_B_trigger
 additional_input_files =  FT_53_V10_AN3_L1FastJet_AK7PFchs.txt, FT_53_V10_AN3_L2Relative_AK7PFchs.txt, FT_53_V10_AN3_L3Absolute_AK7PFchs.txt,FT_53_V10_AN3_L2L3Residual_AK7PFchs.txt, FT_53_V10_AN3_Uncertainty_AK7PFchs.txt
