removed mistag files

--- a/TTBSMPatTuples/test/crab_ZprimeNrw1000.cfg
+++ b/TTBSMPatTuples/test/crab_ZprimeNrw1000.cfg
@@ -12,6 +12,7 @@ number_of_jobs = 50
 get_edm_output = 1
 pycfg_params = 
 #lumi_mask=Cert_160404-171116_7TeV_PromptReco_Collisions11_JSON.txt
+allow_NonProductionCMSSW = 1
 
 [USER]
 #debug_wrapper = 1
