--- a/Ntuplizer/test/crab_data_run_A.cfg
+++ b/Ntuplizer/test/crab_data_run_A.cfg
@@ -12,7 +12,7 @@ pset = had_data.py
 total_number_of_lumis = -1
 number_of_jobs = 50
 get_edm_output = 1
-pycfg_params = runOnData=1 JES='nominal' JER='nominal'
+pycfg_params = runOnData=1 JES=nominal JER=nominal
 
 [USER]
 return_data = 1
